Improved UTs for BackfillFetcherTest and GapDetectorTest, increasing coverage and scenarios.
Signed-off-by: Alfredo Gutierrez Grajeda <alfredo@hashgraph.com>